Service 4 Product Digital Twin/infra/cdk.out/CircularIntelligenceOS-DigitalTwinService.template.json
{
 "Resources": {
  "ProductBusinessVpcDD02A478": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS/VPC-3-ProductBusinessLayer"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/Resource"
   }
  },
  "ProductBusinessVpcPublicSubnet1Subnet7E2C7F7F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet1/Subnet"
   }
  },
  "ProductBusinessVpcPublicSubnet1RouteTable45B46E35": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet1/RouteTable"
   }
  },
  "ProductBusinessVpcPublicSubnet1RouteTableAssociationF41F1A3A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProductBusinessVpcPublicSubnet1RouteTable45B46E35"
    },
    "SubnetId": {
     "Ref": "ProductBusinessVpcPublicSubnet1Subnet7E2C7F7F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "ProductBusinessVpcPublicSubnet1DefaultRouteB36E9479": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ProductBusinessVpcIGW7E732ADE"
    },
    "RouteTableId": {
     "Ref": "ProductBusinessVpcPublicSubnet1RouteTable45B46E35"
    }
   },
   "DependsOn": [
    "ProductBusinessVpcVPCGWD356E2E7"
   ],
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "ProductBusinessVpcPublicSubnet1EIP8B91909D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet1/EIP"
   }
  },
  "ProductBusinessVpcPublicSubnet1NATGateway62E42DD9": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ProductBusinessVpcPublicSubnet1EIP8B91909D",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ProductBusinessVpcPublicSubnet1Subnet7E2C7F7F"
    },
    "Tags": [
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "ProductBusinessVpcPublicSubnet1DefaultRouteB36E9479",
    "ProductBusinessVpcPublicSubnet1RouteTableAssociationF41F1A3A"
   ],
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet1/NATGateway"
   }
  },
  "ProductBusinessVpcPublicSubnet2Subnet1E8393F9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet2/Subnet"
   }
  },
  "ProductBusinessVpcPublicSubnet2RouteTable4644F0D8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet2/RouteTable"
   }
  },
  "ProductBusinessVpcPublicSubnet2RouteTableAssociation32C89DB8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProductBusinessVpcPublicSubnet2RouteTable4644F0D8"
    },
    "SubnetId": {
     "Ref": "ProductBusinessVpcPublicSubnet2Subnet1E8393F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "ProductBusinessVpcPublicSubnet2DefaultRoute9650822C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ProductBusinessVpcIGW7E732ADE"
    },
    "RouteTableId": {
     "Ref": "ProductBusinessVpcPublicSubnet2RouteTable4644F0D8"
    }
   },
   "DependsOn": [
    "ProductBusinessVpcVPCGWD356E2E7"
   ],
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "ProductBusinessVpcPrivateSubnet1SubnetE2084611": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet1/Subnet"
   }
  },
  "ProductBusinessVpcPrivateSubnet1RouteTable7304A37A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet1/RouteTable"
   }
  },
  "ProductBusinessVpcPrivateSubnet1RouteTableAssociation0E649FB4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProductBusinessVpcPrivateSubnet1RouteTable7304A37A"
    },
    "SubnetId": {
     "Ref": "ProductBusinessVpcPrivateSubnet1SubnetE2084611"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "ProductBusinessVpcPrivateSubnet1DefaultRoute315A6FF4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ProductBusinessVpcPublicSubnet1NATGateway62E42DD9"
    },
    "RouteTableId": {
     "Ref": "ProductBusinessVpcPrivateSubnet1RouteTable7304A37A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "ProductBusinessVpcPrivateSubnet2Subnet8B268BDB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet2/Subnet"
   }
  },
  "ProductBusinessVpcPrivateSubnet2RouteTableB5A915D1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet2/RouteTable"
   }
  },
  "ProductBusinessVpcPrivateSubnet2RouteTableAssociationC82DA6A8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProductBusinessVpcPrivateSubnet2RouteTableB5A915D1"
    },
    "SubnetId": {
     "Ref": "ProductBusinessVpcPrivateSubnet2Subnet8B268BDB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "ProductBusinessVpcPrivateSubnet2DefaultRouteCF557040": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ProductBusinessVpcPublicSubnet1NATGateway62E42DD9"
    },
    "RouteTableId": {
     "Ref": "ProductBusinessVpcPrivateSubnet2RouteTableB5A915D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "ProductBusinessVpcIGW7E732ADE": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "DomainName",
      "Value": "VPC-3-ProductBusiness"
     },
     {
      "Key": "Name",
      "Value": "CircularIntelligenceOS/VPC-3-ProductBusinessLayer"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/IGW"
   }
  },
  "ProductBusinessVpcVPCGWD356E2E7": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ProductBusinessVpcIGW7E732ADE"
    },
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductBusinessVpc/VPCGW"
   }
  },
  "ProductDigitalTwinTableEC3AF912": {
   "Type": "AWS::DynamoDB::Table",
   "Properties": {
    "AttributeDefinitions": [
     {
      "AttributeName": "productId",
      "AttributeType": "S"
     }
    ],
    "BillingMode": "PAY_PER_REQUEST",
    "KeySchema": [
     {
      "AttributeName": "productId",
      "KeyType": "HASH"
     }
    ],
    "TableName": "ProductDigitalTwin"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/ProductDigitalTwinTable/Resource"
   }
  },
  "DigitalTwinClusterAB00DA11": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinCluster/Resource"
   }
  },
  "DigitalTwinServiceLB5816AA62": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "DigitalTwinServiceLBSecurityGroup39EE85C5",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "ProductBusinessVpcPublicSubnet1Subnet7E2C7F7F"
     },
     {
      "Ref": "ProductBusinessVpcPublicSubnet2Subnet1E8393F9"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "ProductBusinessVpcPublicSubnet1DefaultRouteB36E9479",
    "ProductBusinessVpcPublicSubnet1RouteTableAssociationF41F1A3A",
    "ProductBusinessVpcPublicSubnet2DefaultRoute9650822C",
    "ProductBusinessVpcPublicSubnet2RouteTableAssociation32C89DB8"
   ],
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/LB/Resource"
   }
  },
  "DigitalTwinServiceLBSecurityGroup39EE85C5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB CircularIntelligenceOSDigitalTwinServiceLB7059F08F",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/LB/SecurityGroup/Resource"
   }
  },
  "DigitalTwinServiceLBSecurityGrouptoCircularIntelligenceOSDigitalTwinServiceSecurityGroup601713128004EF2C5334": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "DigitalTwinServiceSecurityGroup2C05F98D",
      "GroupId"
     ]
    },
    "FromPort": 8004,
    "GroupId": {
     "Fn::GetAtt": [
      "DigitalTwinServiceLBSecurityGroup39EE85C5",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8004
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/LB/SecurityGroup/to CircularIntelligenceOSDigitalTwinServiceSecurityGroup60171312:8004"
   }
  },
  "DigitalTwinServiceLBPublicListener9853E979": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "DigitalTwinServiceLBPublicListenerECSGroupD267AAF9"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "DigitalTwinServiceLB5816AA62"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/LB/PublicListener/Resource"
   }
  },
  "DigitalTwinServiceLBPublicListenerECSGroupD267AAF9": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/health",
    "Matcher": {
     "HttpCode": "200"
    },
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "DigitalTwinServiceTaskDefTaskRole7EB8093D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/TaskDef/TaskRole/Resource"
   }
  },
  "DigitalTwinServiceTaskDefTaskRoleDefaultPolicy77ECD746": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "dynamodb:BatchGetItem",
        "dynamodb:GetRecords",
        "dynamodb:GetShardIterator",
        "dynamodb:Query",
        "dynamodb:GetItem",
        "dynamodb:Scan",
        "dynamodb:ConditionCheckItem",
        "dynamodb:BatchWriteItem",
        "dynamodb:PutItem",
        "dynamodb:UpdateItem",
        "dynamodb:DeleteItem",
        "dynamodb:DescribeTable"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::GetAtt": [
          "ProductDigitalTwinTableEC3AF912",
          "Arn"
         ]
        },
        {
         "Ref": "AWS::NoValue"
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "DigitalTwinServiceTaskDefTaskRoleDefaultPolicy77ECD746",
    "Roles": [
     {
      "Ref": "DigitalTwinServiceTaskDefTaskRole7EB8093D"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/TaskDef/TaskRole/DefaultPolicy/Resource"
   }
  },
  "DigitalTwinServiceTaskDef2E8E0850": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "ENVIRONMENT",
        "Value": "production"
       },
       {
        "Name": "DYNAMODB_TABLE_NAME",
        "Value": {
         "Ref": "ProductDigitalTwinTableEC3AF912"
        }
       },
       {
        "Name": "AWS_REGION",
        "Value": "us-east-1"
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Sub": "706335435423.dkr.ecr.us-east-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-706335435423-us-east-1:38523035f878328cb49357b1c0c5a93476a4fa37f9d96688f4a78e6c278bd44e"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "DigitalTwinServiceTaskDefwebLogGroup62CFAF42"
        },
        "awslogs-stream-prefix": "DigitalTwinService",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 8004,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "DigitalTwinServiceTaskDefExecutionRoleFD6A878C",
      "Arn"
     ]
    },
    "Family": "CircularIntelligenceOSDigitalTwinServiceTaskDef22743CA0",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "DigitalTwinServiceTaskDefTaskRole7EB8093D",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/TaskDef/Resource"
   }
  },
  "DigitalTwinServiceTaskDefwebLogGroup62CFAF42": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/TaskDef/web/LogGroup/Resource"
   }
  },
  "DigitalTwinServiceTaskDefExecutionRoleFD6A878C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/TaskDef/ExecutionRole/Resource"
   }
  },
  "DigitalTwinServiceTaskDefExecutionRoleDefaultPolicy2BF26581": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ecr:us-east-1:706335435423:repository/cdk-hnb659fds-container-assets-706335435423-us-east-1"
         ]
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "DigitalTwinServiceTaskDefwebLogGroup62CFAF42",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "DigitalTwinServiceTaskDefExecutionRoleDefaultPolicy2BF26581",
    "Roles": [
     {
      "Ref": "DigitalTwinServiceTaskDefExecutionRoleFD6A878C"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "DigitalTwinServiceF491C81F": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "DigitalTwinClusterAB00DA11"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 2,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 8004,
      "TargetGroupArn": {
       "Ref": "DigitalTwinServiceLBPublicListenerECSGroupD267AAF9"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "DigitalTwinServiceSecurityGroup2C05F98D",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ProductBusinessVpcPrivateSubnet1SubnetE2084611"
       },
       {
        "Ref": "ProductBusinessVpcPrivateSubnet2Subnet8B268BDB"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "DigitalTwinServiceTaskDef2E8E0850"
    }
   },
   "DependsOn": [
    "DigitalTwinServiceLBPublicListenerECSGroupD267AAF9",
    "DigitalTwinServiceLBPublicListener9853E979",
    "DigitalTwinServiceTaskDefTaskRoleDefaultPolicy77ECD746",
    "DigitalTwinServiceTaskDefTaskRole7EB8093D"
   ],
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/Service/Service"
   }
  },
  "DigitalTwinServiceSecurityGroup2C05F98D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ProductBusinessVpcDD02A478"
    }
   },
   "DependsOn": [
    "DigitalTwinServiceTaskDefTaskRoleDefaultPolicy77ECD746",
    "DigitalTwinServiceTaskDefTaskRole7EB8093D"
   ],
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/Service/SecurityGroup/Resource"
   }
  },
  "DigitalTwinServiceSecurityGroupfromCircularIntelligenceOSDigitalTwinServiceLBSecurityGroupCC01C29C80041F61C5C0": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8004,
    "GroupId": {
     "Fn::GetAtt": [
      "DigitalTwinServiceSecurityGroup2C05F98D",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DigitalTwinServiceLBSecurityGroup39EE85C5",
      "GroupId"
     ]
    },
    "ToPort": 8004
   },
   "DependsOn": [
    "DigitalTwinServiceTaskDefTaskRoleDefaultPolicy77ECD746",
    "DigitalTwinServiceTaskDefTaskRole7EB8093D"
   ],
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/DigitalTwinService/Service/SecurityGroup/from CircularIntelligenceOSDigitalTwinServiceLBSecurityGroupCC01C29C:8004"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31STW/bMAz9Lb0rWtMedk7TrghQbIZT9BrQMutysSVDolIYhv/7aDlO0g/spMenR5F81I1eLq/18grew8KU+0VNhe63DGavhNr1aG50/9IatX61L9laZbGoyWxjYZFH7oxyFxmfoajxzJ+5VQjOEDA5exKP4GGTjcdv4EdgfIdOZZ4OAs8PbyyjFzwLpk6O0Yql17cGLastmuiJu0fvYpt6+C/xUHkM4Qu9sYkfVNlZaFwpdpyGSmBQaILu13UM0tdIz/AX+ArGecP+Hl/J0jztZ8ZZBrLoL7hj7hb9gczk4ARTuV0LPJoQ9Kptxf/k45OD8g5qsAbLT+lYQ2AytSiKpCBbHWSR32enIT7ElzqS2exRM+OL+2epLLuZLb4IB0XQ6D53k3npzJzkpRVOaJzO7yAE5KDvndmj3zRQjd9Fli93OsfWBWLnuzsIqGpXiflPrjpVn [...]
   },
   "Metadata": {
    "aws:cdk:path": "CircularIntelligenceOS-DigitalTwinService/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "DigitalTwinServiceLoadBalancerDNS329F51C5": {
   "Value": {
    "Fn::GetAtt": [
     "DigitalTwinServiceLB5816AA62",
     "DNSName"
    ]
   }
  },
  "DigitalTwinServiceServiceURL58C04FA1": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "DigitalTwinServiceLB5816AA62",
        "DNSName"
       ]
      }
     ]
    ]
   }
  },
  "DigitalTwinServiceURL": {
   "Description": "URL for the Product Digital Twin Service",
   "Value": {
    "Fn::GetAtt": [
     "DigitalTwinServiceLB5816AA62",
     "DNSName"
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
